--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="course col">
             <div class="institution_dates row">
                 <div class="institution col" id="institution_title">
-                    The Hong Kong Polytechnic University
+                    The Hong Kong Polytechnic University, Hong Kong
                 </div>
                 <div class="main_color dates col-md-auto  justify-content-end">
                     2021
@@ -199,7 +199,7 @@
         <div class="course col">
             <div class="institution_dates row">
                 <div class="institution col" id="institution_title">
-                    The Hong Kong Polytechnic University
+                    The Hong Kong Polytechnic University, Hong Kong
                 </div>
                 <div class="main_color dates col-md-auto  justify-content-end">
                     2018
@@ -224,7 +224,7 @@
         <div class="course col">
             <div class="institution_dates row">
                 <div class="institution col" id="institution_title">
-                    Northwestern Polytechnical University
+                    Northwestern Polytechnical University, Xi&#39;an, China
                 </div>
                 <div class="main_color dates col-md-auto  justify-content-end">
                     2013
