--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
         
-        <a class="main_color" rel="me" href='https://scholar.google.com/Xianjin%20Xia' target="_blank">
+        <a class="main_color" rel="me" href='https://scholar.google.com/citations?user=SxdfsPcAAAAJ' target="_blank">
             <i class="ai ai-2x ai-google-scholar academic_icons_customize"></i>
         </a>
         
