--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <div class="introduction row w-100 text-justify">
     <div class="col w-100">
         <p><strong>Biography:</strong> Dr. Xianjin XIA is currently a Research Assistant Professor (RAP) at the Department of Computing (COMP) of the Hong Kong Polytechnic University (HK PolyU). Before that, he joined PolyU as a Post-doctoral Fellow in Aug 2018 under the supervision of Prof. Yuanqing ZHENG. He received B.S. degree in Software Engineering from Northwestern Polytechnical University, Xi&rsquo;an, China in 2010. He received M.S. and Ph.D. degrees in Computer Science from the same university in 2013 and 2018, respectively. He is a member of IEEE and ACM. Know more about Xianjin on his <a href="https://sites.google.com/view/xjxia/home">official homepage</a>.</p>
-<p><strong>HIRING:</strong> We are looking for research assistants, Ph.D. students and Post-doc research staff at all levels in IoT networking and applications. Multiple openings are now available! Please send me email if you are interested.</p>
+<p><strong>HIRING:</strong> We are looking for research assistants, Ph.D. students and Post-doc research staff at all levels in IoT networking and applications. Multiple openings are now available (<a href="https://sites.google.com/view/xjxia/join-us">see more details</a>)! Please send me email if you are interested.</p>
 <hr>
 
     </div>
